--- a/client-side/reserve-app/src/App.css
+++ b/client-side/reserve-app/src/App.css
@@ -1,17 +1,4 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 .ust {
 
   margin: 0px;
@@ -31,17 +18,19 @@
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
 }
-.rectangle{
+
+.rectangle {
   border: 1px black;
   position: absolute;
   height: 5px;
   background-color: rgb(83, 102, 122);
 }
+
 .rectangle1 {
   width: 30px;
 
   left: 25%;
- 
+
 }
 
 .rectangle2 {
@@ -59,19 +48,28 @@
   top: 11px;
   left: 37px;
 }
-.desk{
+
+.desk {
   position: relative;
   width: 10px;
   border-bottom: 10px solid rgb(87, 230, 64);
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
 }
+
+.desk:hover{
+  width: 12px;
+  border-bottom: 12px solid rgb(166, 231, 156);
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+}
+
 .desk1 {
   top: 5px;
   left: 0px;
 
 }
- 
+
 .desk2 {
   transform: rotate(63deg);
 
@@ -83,7 +81,7 @@
 .desk3 {
   transform: rotate(-63deg);
 
-  top:5px;
+  top: 5px;
   left: -15px;
 
 }
@@ -96,8 +94,8 @@
   height: 25px;
   width: 50px;
   border-bottom: 1px solid black;
-border-top-left-radius:3px;
-border-top-right-radius:3px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 
 }
 
@@ -105,26 +103,27 @@ border-top-right-radius:3px;
   display: inline-block;
   transform: rotate(0deg);
 
-} 
-.pc1 {
+}
+.pc{
   position: absolute;
-  left:34%;
+  left: 34%;
   height: 10px;
   width: 15px;
   background-color: red;
-  top:3px;
- border-radius: 3px;
+  border-radius: 3px;
+}
+.pc:hover{
+  height: 13px;
+  width: 18px;
+  background-color: rgb(255, 69, 22);
 
+}
+.pc1 {
+  top: 3px;
 }
 
 .pc2 {
-  position: absolute; 
-  left:34%;
-  height: 10px; /* This line seems to be incomplete. Please provide a valid value. */
-  width: 15px; /* This line seems to be incomplete. Please provide a valid value. */
-   background-color: red;
-   bottom:3px;
-   border-radius: 3px;
+  bottom: 3px;
 }
 
 .altrect {
@@ -133,34 +132,7 @@ border-top-right-radius:3px;
   padding: 0;
   height: 25px;
   width: 50px;
-   border-bottom-left-radius:3px;
-border-bottom-right-radius:3px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-/* .desk{
-  border-style: solid;
-
-} */
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
