--- a/client-side/reserve-app/src/components/Modal/Modal.css
+++ b/client-side/reserve-app/src/components/Modal/Modal.css
@@ -8,7 +8,6 @@ body.active-modal {
     margin: 100px auto 0;
     font-size: 18px;
 }
-
 .modal, .overlay {
     width: 100vw;
     height: 100vh;
@@ -17,12 +16,19 @@ body.active-modal {
     right: 0;
     bottom: 0;
     position: fixed;
+   
 }
-
+.adminContainer{
+  background-color: rgb(168, 169, 170);
+}
 .overlay {
     background: rgba(49,49,49,0.8);
 }
 .modal-content {
+    border:1px solid black;
+    box-shadow: 3px 5px #888888;
+   
+   
     position: absolute;
     top: 40%;
     left: 50%;
@@ -34,10 +40,35 @@ body.active-modal {
     max-width: 600px;
     min-width: 300px;
 }
+.mdl{background: #e2e1e1;}
+.test{
+    height: 70%;
+  overflow-y: scroll;
 
+
+}
 .close-modal {
     position: absolute;
     top: 10px;
     right: 10px;
     padding: 5px 7px;
+    border-radius: 30px;
 }
+
+.control-res{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 5px 7px;
+    border-radius: 30px;
+} 
+
+.custom-tile-selected {
+    background-color: rgb(245, 0, 0);
+  }
+  
+  .react-calendar__tile--disabled {
+    background-color: #773a3a; /* Gri arkaplan rengi */
+  }
+  
+
